added nbow with embeddingbag example

--- a/experimental/1_nbow.ipynb
+++ b/experimental/1_nbow.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<torchtext.experimental.datasets.raw.text_classification.RawTextIterableDataset object at 0x7f63ac6b23a0>\n"
+      "<torchtext.experimental.datasets.raw.text_classification.RawTextIterableDataset object at 0x7f56d84f0ac0>\n"
      ]
     }
    ],
@@ -1306,7 +1306,7 @@
       "Epoch: 03 | Epoch Time: 0m 4s\n",
       "\tTrain Loss: 0.629 | Train Acc: 72.45%\n",
       "\t Val. Loss: 0.611 |  Val. Acc: 73.54%\n",
-      "Epoch: 04 | Epoch Time: 0m 5s\n",
+      "Epoch: 04 | Epoch Time: 0m 4s\n",
       "\tTrain Loss: 0.583 | Train Acc: 76.17%\n",
       "\t Val. Loss: 0.566 |  Val. Acc: 77.00%\n",
       "Epoch: 05 | Epoch Time: 0m 4s\n",
