refactor of data loading - ignore trying to keep things as generators

--- a/experimental/5_transformer.ipynb
+++ b/experimental/5_transformer.ipynb
@@ -68,28 +68,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "sqImRLskbrAd"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def get_train_valid_split(raw_train_data, split_ratio = 0.7):\n",
-    "\n",
-    "    raw_train_data = list(raw_train_data)\n",
-    "        \n",
-    "    random.shuffle(raw_train_data)\n",
-    "        \n",
-    "    n_train_examples = int(len(raw_train_data) * split_ratio)\n",
-    "        \n",
-    "    train_data = raw_train_data[:n_train_examples]\n",
-    "    valid_data = raw_train_data[n_train_examples:]\n",
-    "    \n",
-    "    #train_data = RawTextIterableDataset(train_data)\n",
-    "    #valid_data = RawTextIterableDataset(valid_data)\n",
-    "    \n",
-    "    return train_data, valid_data"
+    "raw_train_data = list(raw_train_data)\n",
+    "raw_test_data = list(raw_test_data)"
    ]
   },
   {
@@ -98,31 +81,33 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "YgKzkSjibsCh"
+    "id": "sqImRLskbrAd"
    },
    "outputs": [],
    "source": [
-    "raw_train_data, raw_valid_data = get_train_valid_split(raw_train_data)"
+    "def get_train_valid_split(raw_train_data, split_ratio = 0.7):\n",
+    "        \n",
+    "    random.shuffle(raw_train_data)\n",
+    "        \n",
+    "    n_train_examples = int(len(raw_train_data) * split_ratio)\n",
+    "        \n",
+    "    train_data = raw_train_data[:n_train_examples]\n",
+    "    valid_data = raw_train_data[n_train_examples:]\n",
+    "    \n",
+    "    return train_data, valid_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(17500, 7500)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "YgKzkSjibsCh"
+   },
+   "outputs": [],
    "source": [
-    "len(raw_train_data), len(raw_valid_data)"
+    "raw_train_data, raw_valid_data = get_train_valid_split(raw_train_data)"
    ]
   },
   {
@@ -216,7 +201,7 @@
    "outputs": [],
    "source": [
     "def build_vocab_from_data(raw_data, tokenizer, **vocab_kwargs):\n",
-    "    \n",
+    "        \n",
     "    token_freqs = collections.Counter()\n",
     "    \n",
     "    for label, text in raw_data:\n",
@@ -240,7 +225,9 @@
    "source": [
     "max_size = 25_000\n",
     "\n",
-    "vocab = build_vocab_from_data(raw_train_data, tokenizer, max_size = max_size)"
+    "vocab = build_vocab_from_data(raw_train_data, \n",
+    "                              tokenizer, \n",
+    "                              max_size = max_size)"
    ]
   },
   {
@@ -249,18 +236,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "25002"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique tokens in vocab: 25,002\n"
+     ]
     }
    ],
    "source": [
-    "len(vocab)"
+    "print(f'Unique tokens in vocab: {len(vocab):,}')"
    ]
   },
   {
@@ -273,10 +257,8 @@
    },
    "outputs": [],
    "source": [
-    "def process_raw_data(raw_data, tokenizer, vocab):\n",
-    "    \n",
-    "    raw_data = [(label, text) for (label, text) in raw_data]\n",
-    "\n",
+    "def raw_data_to_dataset(raw_data, tokenizer, vocab):\n",
+    "        \n",
     "    text_transform = sequential_transforms(tokenizer.tokenize,\n",
     "                                           vocab_func(vocab),\n",
     "                                           totensor(dtype=torch.long))\n",
@@ -303,9 +285,9 @@
    },
    "outputs": [],
    "source": [
-    "train_data = process_raw_data(raw_train_data, tokenizer, vocab)\n",
-    "valid_data = process_raw_data(raw_valid_data, tokenizer, vocab)\n",
-    "test_data = process_raw_data(raw_test_data, tokenizer, vocab)"
+    "train_data = raw_data_to_dataset(raw_train_data, tokenizer, vocab)\n",
+    "valid_data = raw_data_to_dataset(raw_valid_data, tokenizer, vocab)\n",
+    "test_data = raw_data_to_dataset(raw_test_data, tokenizer, vocab)"
    ]
   },
   {
@@ -314,18 +296,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(17500, 7500, 25000)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples: 17,500\n",
+      "Number of validation examples: 7,500\n",
+      "Number of testing examples: 25,000\n"
+     ]
     }
    ],
    "source": [
-    "len(train_data), len(valid_data), len(test_data)"
+    "print(f'Number of training examples: {len(train_data):,}')\n",
+    "print(f'Number of validation examples: {len(valid_data):,}')\n",
+    "print(f'Number of testing examples: {len(test_data):,}')"
    ]
   },
   {
@@ -1191,34 +1174,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 27s\n",
+      "Epoch: 01 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.604 | Train Acc: 64.21%\n",
       "\t Val. Loss: 0.457 |  Val. Acc: 78.76%\n",
-      "Epoch: 02 | Epoch Time: 0m 27s\n",
+      "Epoch: 02 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.364 | Train Acc: 84.16%\n",
       "\t Val. Loss: 0.355 |  Val. Acc: 84.73%\n",
-      "Epoch: 03 | Epoch Time: 0m 26s\n",
+      "Epoch: 03 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.270 | Train Acc: 89.23%\n",
       "\t Val. Loss: 0.384 |  Val. Acc: 84.55%\n",
-      "Epoch: 04 | Epoch Time: 0m 26s\n",
+      "Epoch: 04 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.206 | Train Acc: 92.15%\n",
       "\t Val. Loss: 0.355 |  Val. Acc: 86.63%\n",
-      "Epoch: 05 | Epoch Time: 0m 27s\n",
+      "Epoch: 05 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.150 | Train Acc: 94.58%\n",
       "\t Val. Loss: 0.435 |  Val. Acc: 86.43%\n",
-      "Epoch: 06 | Epoch Time: 0m 27s\n",
+      "Epoch: 06 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.101 | Train Acc: 96.54%\n",
       "\t Val. Loss: 0.455 |  Val. Acc: 86.67%\n",
-      "Epoch: 07 | Epoch Time: 0m 27s\n",
+      "Epoch: 07 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.084 | Train Acc: 97.17%\n",
       "\t Val. Loss: 0.505 |  Val. Acc: 84.09%\n",
-      "Epoch: 08 | Epoch Time: 0m 26s\n",
+      "Epoch: 08 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.066 | Train Acc: 97.82%\n",
       "\t Val. Loss: 0.508 |  Val. Acc: 86.05%\n",
-      "Epoch: 09 | Epoch Time: 0m 26s\n",
+      "Epoch: 09 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.041 | Train Acc: 98.78%\n",
       "\t Val. Loss: 0.605 |  Val. Acc: 86.25%\n",
-      "Epoch: 10 | Epoch Time: 0m 26s\n",
+      "Epoch: 10 | Epoch Time: 0m 25s\n",
       "\tTrain Loss: 0.035 | Train Acc: 99.01%\n",
       "\t Val. Loss: 0.681 |  Val. Acc: 85.79%\n"
      ]
